--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint": "tslint ./src/**/*.ts -t verbose"
   },
   "keywords": [],
-  "author": "",
+  "author": "Volha Loisha",
   "license": "MIT",
   "dependencies": {
     "@angular/common": "~4.3.4",
